Add TAO mix benchmark code for Neo4j